# Simens

./: .gitignore  CMakeLists.txt  README_CMAKE.md  board.c  board.h  gd32f4xx_it.c  gd32f4xx_it.h  main.c  main.h  openocd_stlink.cfg  readme.txt  systick.c  systick.h  系统方案设计书.md  编译与烧录教程.md
app/: app_display.c  app_display.h  app_main.c  app_main.h  app_protocol.c  app_protocol.h  app_state.c  app_state.h  app_storage.c  app_storage.h
bootloader/: bl_flash.c  bl_flash.h  bl_jump.c  bl_jump.h  bl_main.c  bl_main.h  bl_uart.c  bl_uart.h
bsp/: bsp_adc.c  bsp_adc.h  bsp_dac.c  bsp_dac.h  bsp_flash.c  bsp_flash.h  bsp_gpio.c  bsp_gpio.h  bsp_oled.c  bsp_oled.h  bsp_power.c  bsp_power.h  bsp_rtc.c  bsp_rtc.h  bsp_uart.c  bsp_uart.h
build_doccheck/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  gd32f450_template.elf  gd32f450_template.hex  gd32f450_template.map
build_software_scheme/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  gd32f450_template.elf  gd32f450_template.map
cmake/: toolchain-arm-none-eabi.cmake
common/: crc16.c  crc16.h  filter.c  filter.h  project_types.h  ringbuffer.c  ringbuffer.h  soft_timer.c  soft_timer.h
scripts/: build_flash.sh  check_gd32_sdk.sh  configure_build.sh  setup_wsl_env.sh
service/: srv_display.c  srv_display.h  srv_power.c  srv_power.h  srv_protocol.c  srv_protocol.h  srv_sample.c  srv_sample.h  srv_settings.c  srv_settings.h  srv_storage.c  srv_storage.h
